Hide audio controls for cleaner UI

--- a/page5.html
+++ b/page5.html
@@ -88,7 +88,7 @@
         <button id="pgPlay" class="song-btn song-play">Play HASEEN ❤️</button>
         <button id="pgPause" class="song-btn song-pause">Pause 💔</button>
       </div>
-      <audio id="pgAudio" src="assets/images/music/HASEEN.mp3" preload="auto" controls></audio>
+      <audio id="pgAudio" src="assets/images/music/HASEEN.mp3" preload="auto"></audio>
     </div>
 
     <div class="card">
