Fix audio on page6.html: preload auto and add debugging

--- a/page6.html
+++ b/page6.html
@@ -91,7 +91,7 @@
         <button id="jogiPlay" class="song-btn song-play">Play Palat Tera Hero Idhar Hai ❤️</button>
         <button id="jogiPause" class="song-btn song-pause">Pause 💔</button>
       </div>
-      <audio id="jogiAudio" src="assets/images/music/Palat-TeraHeroldharHai.mp3" preload="none"></audio>
+      <audio id="jogiAudio" src="assets/images/music/Palat-TeraHeroldharHai.mp3" preload="auto"></audio>
     </div>
 
     <div class="grid">
@@ -174,9 +174,15 @@
   const jogiPlay = document.getElementById('jogiPlay');
   const jogiPause = document.getElementById('jogiPause');
 
+  // Debug: add event listeners
+  jogiAudio.addEventListener('error', (e) => console.log('Audio load error:', e));
+  jogiAudio.addEventListener('canplay', () => console.log('Audio can play'));
+  jogiAudio.addEventListener('loadedmetadata', () => console.log('Audio metadata loaded'));
+
   jogiPlay.addEventListener('click', ()=>{
+    console.log('Play button clicked');
     if(!jogiAudio.src) jogiAudio.src = 'assets/images/music/Palat-TeraHeroldharHai.mp3';
-    jogiAudio.play().catch(()=>{});
+    jogiAudio.play().then(() => console.log('Audio playing')).catch((err) => console.log('Play failed:', err));
     jogiPlay.style.display = 'none';
     jogiPause.style.display = 'inline-block';
   });
