--- a/page3.html
+++ b/page3.html
@@ -146,14 +146,14 @@
       </div>
 
       <!-- 6 -->
-      <div class="card" data-img="assets/images/6.jpg" data-caption="You said ‘we won’ — and my heart fell for you again. ❤️🔥" data-song="assets/images/music/Palat-TeraHeroldharHai.mp3">
+      <div class="card" data-img="assets/images/6.jpg" data-caption="You said ‘I won’ — and my heart fell for you again. ❤️🔥" data-song="assets/images/music/Palat-TeraHeroldharHai.mp3">
         <button class="play-sml">♪</button>
         <div class="img-wrap"><img src="assets/images/6.jpg"></div>
         <div class="caption">You said “I won” — and I fell again. ❤️🔥</div>
       </div>
 
       <!-- 7 -->
-      <div class="card" data-img="assets/images/7.jpg" data-caption="Now I am Your Mister Lover officaly. ❤️" data-song="assets/images/music/Palat-TeraHeroldharHai.mp3">
+      <div class="card" data-img="assets/images/7.jpg" data-caption="Now I am Your Mister Lover officaly. ❤️" data-song="assets/images/music/HASEEN.mp3">
         <button class="play-sml">♪</button>
         <div class="img-wrap"><img src="assets/images/7.jpg"></div>
         <div class="caption">Now I am Your Mister Lover officaly. ❤️</div>
