Add controls to audio on page6.html for debugging

--- a/page6.html
+++ b/page6.html
@@ -91,7 +91,7 @@
         <button id="jogiPlay" class="song-btn song-play">Play Palat Tera Hero Idhar Hai ❤️</button>
         <button id="jogiPause" class="song-btn song-pause">Pause 💔</button>
       </div>
-      <audio id="jogiAudio" src="assets/images/music/Palat-TeraHeroldharHai.mp3" preload="auto"></audio>
+      <audio id="jogiAudio" src="assets/images/music/Palat-TeraHeroldharHai.mp3" preload="auto" controls></audio>
     </div>
 
     <div class="grid">
