--- a/page6.html
+++ b/page6.html
@@ -84,14 +84,14 @@
     <div class="lead">Little lines for right now — flirty, deep, soft. No heavy talk, only feelings.</div>
 
    
-    <!-- Palat Tera Hero Idhar Hai song -->
+    <!-- HASEEN song -->
     <div class="page-song">
-      <img id="jogiCover" src="assets/images/mainterahero.png" alt="Palat Tera Hero Idhar Hai cover" />
+      <img id="jogiCover" src="assets/images/haseen.png" alt="HASEEN cover" />
       <div class="song-controls">
-        <button id="pgPlay" class="song-btn song-play">Play Palat Tera Hero Idhar Hai ❤️</button>
+        <button id="pgPlay" class="song-btn song-play">Play HASEEN ❤️</button>
         <button id="pgPause" class="song-btn song-pause">Pause 💔</button>
       </div>
-      <audio id="pgAudio" src="assets/images/music/Palat-TeraHeroldharHai.mp3" preload="auto"></audio>
+      <audio id="pgAudio" src="assets/images/music/HASEEN.mp3" preload="auto"></audio>
     </div>
 
     <div class="grid">
@@ -169,7 +169,7 @@
     pagePlay.style.display = 'inline-block';
   });
 
-  // Palat Tera Hero Idhar Hai song
+  // HASEEN song
   const pgAudio = document.getElementById('pgAudio');
   const pgPlay = document.getElementById('pgPlay');
   const pgPause = document.getElementById('pgPause');
