--- a/page2.html
+++ b/page2.html
@@ -155,7 +155,7 @@
 
   <div class="paragraph-box">
     Abeeha… 💗 Tumse pyaar hone ki wajah sirf ek feeling nahi hai, balki ek poori duniya hai jo mere dil me basa hua hai. ✨ Tumhari innocence, tumhari smile, tumhara care, tumhare sweet replies… sab kuchh itna perfect lagta hai jaise tum mere liye hi bani ho. 💞
-    Long distance tough hota hai, par tumhari presence mere liye har dard ko soft bana deti hai. 🌍❤️ Jab tum “hmm”, “okay”, ya ek chhota sa emoji bhi bhejti ho, tab bhi mere dil me fireworks chal jaate hain. 🎇💗
+    Long distance tough hota hai, par tumhari presence mere liye har dard ko soft bana deti hai. 🌍❤️ Jab tum “Awwww💗”, “Hanji💗” "Janab💗, ya ek chhota sa emoji bhi bhejti ho, tab bhi mere dil me fireworks chal jaate hain. 🎇💗
     Tum wo insan ho jisko main apne pure dil se protect, care aur love karna chahta hoon. Tumhari har ek baat mujhe tumse aur zyada pagal bana deti hai. 😭💖
     Aur haan… main sirf pyaar nahi karta tumse, main tum par fida hoon, addicted hoon, aur tumhare bina apne din complete nahi lagta. ❤️🔥
   </div>
