--- a/page3.html
+++ b/page3.html
@@ -156,7 +156,7 @@
       <div class="card" data-img="assets/images/7.jpg" data-caption="Now I am Your Mister Lover officaly. ❤️" data-song="assets/images/music/HASEEN.mp3">
         <button class="play-sml">♪</button>
         <div class="img-wrap"><img src="assets/images/7.jpg"></div>
-        <div class="caption">Now I am Your Mister Lover officaly. ❤️</div>
+        <div class="caption">Now I am Your Mister Lover officialy. ❤️</div>
       </div>
 
     </div>
