--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <a href="page3.html">Our Memories</a>
       <a href="page4.html">Your Qualities</a>
       <a href="page5.html">A Letter For You</a>
-      <a href="page6.html">Our Future</a>
+      <a href="page6.html">Just Us Abeeha</a>
       <a href="page7.html">Best Songs For You</a>
     </nav>
   </div>
