--- a/page7.html
+++ b/page7.html
@@ -100,6 +100,10 @@
     Songs Sunkar Aa jao Madamm main wait kar rha hhu chat pe 🥱
   </div>
 
+     <div style="text-align:center; margin:20px; color:#fff; font-size:1.1rem;">
+    🗣️: Created This Whole Website Just For You - Dushyannt 🫶💐🌹
+  </div>
+    
   <div class="hearts" id="heartLayer" aria-hidden="true"></div>
 
 <script>
