--- a/page5.html
+++ b/page5.html
@@ -112,7 +112,7 @@
 
 I don’t know how to explain this properly, but you feel like the calmest part of my life. Even when we’re far, you still reach me — in the middle of a loud day, in the quiet moments at night, and in those soft corners of my heart I never let anyone enter. You came without forcing anything, and suddenly every space inside me felt warmer.
 
-You’re the softness I look forward to, the comfort I carry around, and the peace I run back to again and again. Every reply from you feels like a little hug across the distance… every “hmm”, every “oh” and every tiny message stays with me longer than you think. 💕😭
+You’re the softness I look forward to, the comfort I carry around, and the peace I run back to again and again. Every reply from you feels like a little hug across the distance… every “Han ji”, every “Dance Karoo🕺💃” and every tiny message stays with me longer than you think. 💕😭
 
 And Abeeha…
 I love you more than I say, and I try to show it in little ways —
